@@ -1,3 +1,10 @@
+Wed Jul 31 23:19:06 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (power_cache_get_power): Change numdigits_ret to size_t *.
+	  (big2str_orig): Change len argument to size_t.
+	  (big2str_karatsuba): Ditto.
+	  (rb_big2str1): Follow the above changes.
+
 Wed Jul 31 22:59:47 2013  Kouhei Sutou  <kou@cozmixng.org>
 
 	* test/rexml/parse/test_notation_declaration.rb: Change class
